{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 7,
  "lineage": "8f62c526-3c89-9518-eb4c-a19193810a13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:060895825842:security-group/sg-0a3ef656d1b9534d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a3ef656d1b9534d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6974e2fef9d4a5c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20210527184848641000000002",
            "name_prefix": "terraform-",
            "owner_id": "060895825842",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-4b518121"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server.aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ca809b7395e0f210",
            "domain": "vpc",
            "id": "eipalloc-a1cbe49b",
            "instance": "i-0454da47306ac83c8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c2efd373c81e5b12",
            "private_dns": "ip-172-31-9-106.eu-central-1.compute.internal",
            "private_ip": "172.31.9.106",
            "public_dns": "ec2-3-68-9-239.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.9.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_elasticache_cluster.redis",
            "aws_security_group.redis",
            "data.aws_ami.base",
            "module.web_server.aws_instance.web_server",
            "module.web_server.aws_security_group.web_server",
            "random_string.server"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd11269eaa69cec",
            "arn": "arn:aws:ec2:eu-central-1:060895825842:instance/i-0454da47306ac83c8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0454da47306ac83c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "maximilian",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2efd373c81e5b12",
            "private_dns": "ip-172-31-9-106.eu-central-1.compute.internal",
            "private_ip": "172.31.9.106",
            "public_dns": "ec2-18-156-198-221.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.198.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085e4d3f27737f7d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20210527184846395300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ecf134a0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c6974e2fef9d4a5c"
            ]
          },
          "dependencies": [
            "aws_elasticache_cluster.redis",
            "aws_security_group.redis",
            "data.aws_ami.base",
            "module.web_server.aws_security_group.web_server",
            "random_string.server"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:060895825842:security-group/sg-0c6974e2fef9d4a5c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6974e2fef9d4a5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20210527184846395300000001",
            "name_prefix": "terraform-",
            "owner_id": "060895825842",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-4b518121"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}